# ggml

examples/: CMakeLists.txt
examples/heat_equation_solver/: CMakeLists.txt  Makefile  create_heat_equation_model.py  main.cpp
examples/heat_equation_solver/include/: FiniteDifference.h  HeatEquationKernels.h  HeatEquationSolver.h  HeatEquationSolverBase.h  HeatEquationSolverFactory.h  HeatEquationSolverNoStreams.h  HeatEquationSolverWithStreams.h
examples/heat_equation_solver/profiler-app/: README.md  creat-csv.py  elur.md  euler.csv  generate_table.py  heat_equation_kernels.txt  kernel_analysis_app.py  profiling.sh
examples/heat_equation_solver/src/: FiniteDifference.cpp  HeatEquationSolver.cpp  HeatEquationSolverEuler.cpp  HeatEquationSolverNoStreams.cpp  HeatEquationSolverRK4.cpp  HeatEquationSolverWithStreams.cpp
examples/heat_equation_solver/src/cuda/: HeatEquationKernels.cu
examples/heat_equation_solver/src/metal/: HeatEquationKernels.metal  MetalHeatEquationSolver.mm
examples/heat_equation_solver/tests/: HeatEquationSolverTests.cpp
examples/matrix-mul/: CMakeLists.txt
examples/matrix-mul/include/: MatrixMul.h
examples/matrix-mul/src/: MatrixMulKernels.cu  main.cpp
